welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:4: error: ';' expected but 'else' found.
}else{
 ^icyHot:9: error: Unmatched closing brace '}' ignored here
 }
 ^